object and ID anti-aliased masks get messed up when using border render + crop #35313

Closed
opened 2013-05-11 17:19:45 +02:00 by Abel Groenewolt · 3 comments

%%%OS X 10.8.3, MacBook Pro 2008, using Nvidia 9400m.

Blender 2.67 creates strangely tiled ID and Object masks when using border render + crop, Blender 2.66a works fine

When trying to render out object masks with anti aliasing, I noticed some odd tiling problem when looking at the Composite output in the UV window. This problem is also present in the .png file that I saved through the UV editor. The preview in the Composite node in the node editor shows images that are deformed as well, but this image does not match the image as it shows in the UV editor.

To reproduce, start with the default cube and give it object index 1. Switch on the Object Index pass, create some border region in the camera view and switch on the Crop option in the Dimensions panel. Render, switch on Use Nodes in the Node editor, add an ID mask node and connect it to the Composite window. Check the result in the UV window (it should be fine), then switch on the Anti-Aliasing option in the ID mask node. Now the output in the UV window is messed up.

When the Crop option is not selected in the Dimensions panel, all works fine so I'm using that as a workaround.

%%%

%%%OS X 10.8.3, MacBook Pro 2008, using Nvidia 9400m. Blender 2.67 creates strangely tiled ID and Object masks when using border render + crop, Blender 2.66a works fine When trying to render out object masks with anti aliasing, I noticed some odd tiling problem when looking at the Composite output in the UV window. This problem is also present in the .png file that I saved through the UV editor. The preview in the Composite node in the node editor shows images that are deformed as well, but this image does not match the image as it shows in the UV editor. To reproduce, start with the default cube and give it object index 1. Switch on the Object Index pass, create some border region in the camera view and switch on the Crop option in the Dimensions panel. Render, switch on Use Nodes in the Node editor, add an ID mask node and connect it to the Composite window. Check the result in the UV window (it should be fine), then switch on the Anti-Aliasing option in the ID mask node. Now the output in the UV window is messed up. When the Crop option is not selected in the Dimensions panel, all works fine so I'm using that as a workaround. %%%

Changed status to: 'Open'

Changed status to: 'Open'

%%%Fixed in svn rev56898.

Was a mistake in a feature i've tried to support (which is trying to make alpha-over of scene onto footage give proper result). Disabled it for now -- need some further thoughts/

Thanks for the report, closing now.%%%

%%%Fixed in svn rev56898. Was a mistake in a feature i've tried to support (which is trying to make alpha-over of scene onto footage give proper result). Disabled it for now -- need some further thoughts/ Thanks for the report, closing now.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
2 Participants
Notifications
Due Date
No due date set.
Dependencies

No dependencies set.

Reference: blender/blender#35313
No description provided.